@@ -12,6 +12,11 @@ version 0.7.10 - Not released, available at https://svn.sourceforge.net/svnroot/
   - BUG: fix a typo in function SaveLinkage, I really need to test these functions as well.
   - BUG: fix a SWIG option bug that prevents help messages of member functions to display.
   - NEW: throw an exception when multiple selectors are applied at the same time.
+  - BUG: fix a memory leak bug with stat operator during allele frequency calculation
+  - NEW: add population::mergePopulation, population::mergePopulationByLoci, 
+		MergePopulations, MergePopulationsByLoci, population::resize
+  - NEW: make sure alleleFreq[x][0] and alleleFreq[x][1] exist, even if there is no
+	    allele 1. This is avoid trouble in  binary form. (maybe not a good idea).
 
 version 0.7.9 - (Rev 885) Apr 3, 2007
   - BUG (build): add solaris support. This OS does not have stdint.h.
